# GMRRNet

./: LICENSE  README.md  gmrrnet.wpr  gmrrnet.wpu  project.toml  pyproject.toml  setup.py
.github/workflows/: automated-sphinx-docs.yml
docs/: requirements
docs/source/: conf.py  index.rst
docs/source/_modules/: gmrrnet.functions.rst  gmrrnet.model.rst  gmrrnet.rst  gmrrnet.utils.rst
docs/source/_static/: dunderlab_custom.css
docs/source/notebooks/: 01-example.ipynb  readme.ipynb  readme.rst
docs/source/notebooks/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
gmrrnet/: functions.py  model.py  utils.py
pruebas/: eegnet_results
src/: functions.py
